--- a/WebView Example/app/src/main/AndroidManifest.xml
+++ b/WebView Example/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.enbiya.demir.webviewexample">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>  //for able to use internet
     <application
-        android:usesCleartextTraffic="true"
+        android:usesCleartextTraffic="true"  // for avoiding cleartext errors
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
